@@ -1,12 +1,11 @@
 [
   { mondemand,
     [
-     { lwes_channel, { 1, [ { "127.0.0.1", 20602 } ] } },
+     { lwes_channel, { 1, [ { "127.0.0.1", 21512 } ] } }
+%     { lwes_channel, { 1, [ { "127.0.0.1", 20602 } ] } },
 %     { lwes_channel, { 2, [{"127.0.0.1",20602}, {"172.16.107.128", 20602}] } },
 %      { config_file, "mondemand.conf" },
-      { vmstats, [ { program_id, mondemand_erlang }
-%                 , {disable_scheduler_wall_time, true }
-                 ] }
+%     , { vmstats, [ { program_id, mondemand_erlang } ] }
 %     { send_interval, 5 }
     ]
   }
