@@ -1,4 +1,9 @@
-* Tue Jun 4 2019 David Hull <david.hull@openx.com> 6.12.0
+* Tue Jun 18 2019 Anthony Molinaro <anthony.molinaro@openx.com> 6.12.1
+- rename some confusing names
+- get mondemand_statdb:config() to print out parts of md_config table
+- make sure gcounters are read from the appropriate table
+
+* Tue Jun 04 2019 David Hull <david.hull@openx.com> 6.12.0
 - Add gcounter type, a counter which emits values like a gauge.
 - Add unknown type in statsmsg to match other libraries.
 
